# nn_ssms

./: .gitignore  analyze_checkpoint.py  config.py  data.py  evaluate_nn.py  pyproject.toml  requirements.txt  testing.ipynb  train.py
dataloaders/: data.py  data_registry.py
dataloaders/datasets/: cifar10.py  hg38_char_tokenizer.py  hg38_dataset.py  induction_heads_dataset.py  sc_dataset.py  selective_copying.py
experiments/: hg38_gene.py  induction_heads.py  sc09_class.py  sc35_class.py  scifar10_class.py  selective_copying.py  testing.py
models/: mamba_cifar.py  mamba_generation.py  mamba_induction_heads.py  mamba_model.py  mamba_selective_copying.py  nn_transformed_model.py  photonic_model.py  test_model.py
nn_mamba/: config.py  datasets.py  testing.ipynb  train.py
nn_mamba/models/: test_model.py
nn_mamba/utils/: lightning.py  modules.py  utils.py
nnt/: nn_conv1d.py  nn_linear.py  nn_mamba_block.py  nn_selective_scan.py  transformation.py  utils.py  validate_nn.py
photonic_selective_scan/: selective_scan_bwd_bf16_real.cu  selective_scan_bwd_fp16_real.cu  selective_scan_bwd_fp32_real.cu  selective_scan_bwd_kernel_photonic.cuh  selective_scan_fwd_bf16.cu  selective_scan_fwd_fp16.cu  selective_scan_fwd_fp32.cu
selective_scan/: photonic_activations.cuh  selective_scan_bwd_bf16_complex.cu  selective_scan_bwd_kernel_photonic.cuh  selective_scan_fwd_kernel_photonic.cuh  selective_scan_photonic.cpp
utils/: activations.py  checkpoint_utils.py  lightning.py  noise_injection.py  non_negativity.py  photonic_activations.py  photonic_selective_scan.py  utils.py
(+3 files in other folders)
